welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
    	if(getCouleurSol()==c:Color){
                          ^SlugSnail:6: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    	if(getCouleurSol()==c:Color){
                             ^